# pirate

./: README.md
pirate/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pirate/action/: Pirate.action  Pirate.action~
pirate/include/pirate/: clamp_straight.h  control.h  motion_primitives.h  motion_primitives.h~  pirate_manager.h  pirate_server.h  pirate_server.h~  setpoint.h
pirate/src/: clamp_straight.cpp  control.cpp  imu_srv_server.cpp  joint_srv_client.cpp  joint_srv_server.cpp  mapper.cpp  mapper.cpp~  motion_primitives.cpp  pirate_manager.cpp  pirate_manager_node.cpp  pirate_server.cpp  pirate_server_node.cpp  setpoint.cpp
